# sqlite-html

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  VERSION  api.md  attrs.go  core_init.c  docs.md  elements.go  go.mod  go.sum  html.h  meta.go  query.go  shared.c  shared.go  test.py  utils.go
.github/workflows/: build.yaml  release.js  release.yaml  test.yaml  upload-deno-assets.js  upload.js
attrs/: attrs.go  register.go
bindings/ruby/: sqlite_html.gemspec
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_html/: __init__.py
deno/: README.md  README.md.tmpl  deno.json  mod.ts  test.ts
elements/: elements.go  register.go
examples/datasette/: Dockerfile  fly.toml
funcs/: funcs.go
internal/: internal.go
meta/: meta.go  register.go
npm/: README.md
npm/sqlite-html/: README.md  package.json  test.js
npm/sqlite-html-darwin-arm64/: README.md  package.json
npm/sqlite-html-darwin-x64/: README.md  package.json
npm/sqlite-html-linux-x64/: README.md  package.json
npm/sqlite-html-windows-x64/: README.md  package.json
python/: README.md
python/datasette_sqlite_html/: README.md  setup.py
python/sqlite_html/: README.md  setup.py
query/: query.go  register.go
scripts/: deno_generate_package.sh  npm_generate_platform_packages.sh  python_generate_package.sh  rename-wheels.py
sqlite/: core_init.c
tests/: attrs.sql  ca-data.sql  capitol.sql  element.sql  la-elex.sql  test-loadable.py  test-python.py  test-sqlite3.py
utils/: register.go  utils.go
(+9 files in other folders)
