[project]
name = "sqlite-utils-sqlite-html"
version = "0.1.3"
description = "TODO"
readme = "README.md"
authors = [{name = "Alex Garcia"}]
license = {text = "Apache-2.0"}
classifiers = []

dependencies = [
    "sqlite-utils",
    "sqlite-html"
]

[project.urls]
Homepage = "https://github.com/asg017/sqlite-html"
Changelog = "https://github.com/asg017/sqlite-html/releases"
Issues = "https://github.com/asg017/sqlite-html/issues"

[project.entry-points.sqlite_utils]
sqlite_html = "sqlite_utils_sqlite_html"
